--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
 .App {
-  text-align: center;
+  
+  background: lightblue;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  
 }
+
+
 
