--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
-  
-  background: lightblue;
+  text-align: center;
+  background-image: url("https://i.imgur.com/1sNE1eX.jpg");
+  background-size: cover;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
   height: 100vh;
@@ -11,5 +13,33 @@
 
 .MessageBoard {
   border: 2px solid black;
+  background: pink;
+  opacity: 0.8;
+  height: 700px;
+  width: 90%;
+}
+
+header {
+  background: lightgreen;
+  width: 100%;
+  height: 8vh;
+}
+
+footer {
+  background: lightcoral;
+  width: 100%;
+}
+
+.origin {
+  background: plum;
+  width: 100%;
+}
+
+.MessageContainer {
+  border: 1px solid grey;
+}
+
+.MessageBoardInput {
+  bottom: 0px;
 }
 
