--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   
 }
@@ -15,7 +15,7 @@
   border: 2px solid black;
   background: pink;
   opacity: 0.8;
-  height: 700px;
+  height: 500px;
   width: 90%;
 }
 
@@ -37,9 +37,35 @@ footer {
 
 .MessageContainer {
   border: 1px solid grey;
+  height: 3rem;
+  width: 35rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.buttonscontainer {
+  display: flex;
+  border: 1px solid black;
+  height: 3rem;
+}
+
+.datecontainer {
+  border: 1px solid black;
+  font-size: x-small;
+}
+
+
+.actualmessage {
+border: 1px solid black;
 }
 
 .MessageBoardInput {
   bottom: 0px;
 }
 
+button {
+  height: 1.4rem;
+  width: 3.5rem;
+  border-radius: 7px;
+}
