--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   width: 100vw;
   
 }
+
+.actualvideo{
+  box-shadow: 10px 10px 40px 15px black;
+}
 .realmessageboard {
   width: 100%;
   background-image: url("https://i.imgur.com/1sNE1eX.jpg");
@@ -21,10 +25,11 @@
 }
 
 .videoscontainer {
-  padding-bottom: 1rem;
+  padding-bottom: 3rem;
   width: 100%;
   color: white;
   text-shadow: 2px 2px black;
+  
   background-size: cover;
   background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsXge0APjtwOUqS7BtIOOXnpNjOF6iaQgMqVQhT3c1YRKrC3uS')
 }
@@ -43,15 +48,24 @@
   border-radius: 1rem;
   box-shadow: 10px 10px 40px 15px black;
 }
+@keyframes example {
+  from {background-color: #4dff88; font-family: cursive; }
+  to {background-color: #80dfff; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  }
+}
 
 header {
   background: lightgreen;
-
+  font-size: xx-large;
   width: 100%;
   height: 8vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  animation-name: example;
+  animation-duration: 4s;
+  animation-iteration-count: 999999999;
+  animation-direction: alternate;
 }
 
 footer {
@@ -117,7 +131,7 @@ font-family: "Lucida Console", Monaco, monospace;
 max-width: 80%;
 width: 80%;
 max-height: 3.2rem;
-border: 2px solid black;
+
 overflow: auto;
 text-align: left;
 justify-content: flex-start;
@@ -135,7 +149,14 @@ button {
   margin-right: 1rem;
   margin-top: 2px;
   margin-bottom: 2px;
+  border: 1px black solid;
 }
+
+ button:hover {
+  background: #f2f2f2;
+  cursor: pointer;
+}
+
 
 .messagetext {
   margin-left: 1rem;
@@ -173,6 +194,14 @@ input {
   outline: none;
   margin-bottom: 10px; 
 
+}
+
+.likenick {
+  color: white;
+  padding-top: 2rem;
+  width: 100%;
+  padding-bottom: 2rem;
+   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
 
 .timeandthedate {
